Fix deprecation warning if building with Java 9+
Signed-off-by: Mark Thomas <markt@apache.org>